    * R459: ADDED: StaffGroup for staffs connected with barlines under bracket in LilyPond export code and ChoirStaff only for non-connected staffs under bracket.
	* R460: FIXED: In LilyPond export stanza number moved to beginning of lyrics
	* R461: FIXED: Crash, when you place a note in non-first voice and the first voice doesn't contain the key signature yet.
	* R462: ADDED:
	  - Correctly export to LilyPond hyphens and melismas. To do this, every word which ends with '-' means that it's connected with another note with an ordinary hyphen (the word is not finished) and every word which ends with '_' means that it's connected with another note with melisma (the word is finished).
	  - Instrument name is now exported for multi-voice staff too.
	* R463: ADDED: Some more LilyPond lyrics improvements.
	* R464: FIXED: Updated example4.not - new hyphens and melismas implemented. Removed stanza numbers - they show up in Lily now out of the box.
	* R465: FIXED: kpdf is now the default preview program.
	* R466: Improved LilyPond export filter:
	  - Support for LilyPond 2.8.x. The exported syntax works out of the box.
	  - New drum note for rectangle note - diamond.
	  - Different drum notes can be present in a single chord now. LilyPond 2.8.x is needed for this, because we use \tweak function.
	* R467: FIXED: Removed mixed ties warning in Lily export. LilyPond 2.4.x and on supports mixed ties perfectly.
	* R468: ADDED: Ties and Slurs are now drawn with wide pen. This gives better readability of the score.
	* R469: FIXED: Some UI polishments. Updated translations.
	* R470: FIXED:
	  - Font size in Lily export works again.
	  - Added official font sizes from Lily documentation:
	    - 11.22 pt (pocket scores)
		- 12.60 pt
		- 14.14 pt
		- 15.87 pt
		- 17.82 pt (song books)
		- 20 pt (standard parts)
		- 22.45 pt
		- 25.2 pt
    * R471: FIXED: A typo in tips&trick - lines are placed using the left mouse button, not middle. Thanks to Takeshi Hamasaki for spotting this.